--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bbpm-helper",
   "displayName": "BBPM-HELPER",
   "description": "This Extension help managing support and api-developent projects for BBPM",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@types/chai": "^4.3.5",
+    "bbpm-helper": "file:",
     "chai": "^4.3.7"
   }
 }
